--- a/server/action-server3/torikime/rpc-cpp.j2
+++ b/server/action-server3/torikime/rpc-cpp.j2
@@ -8,7 +8,7 @@
 namespace {{ namespace }}::{{ contract }}::{{ name }}
 {
 {%- if "request" in rpc %}
-	RpcContract::Responser::~Responser()
+	Rpc::Responser::~Responser()
 	{
 		if (respond)
 		{
@@ -19,7 +19,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 		send(false, r);
 	}
 
-	void RpcContract::Responser::send(bool success, {{ namespace }}::{{ contract }}::{{ name }}::Response& response)
+	void Rpc::Responser::send(bool success, {{ namespace }}::{{ contract }}::{{ name }}::Response& response)
 	{
 		{{ namespace }}::{{ contract }}::{{ name }}::ResponseParcel responseParcel;
 		responseParcel.set_request_id(_requestId);
@@ -37,12 +37,12 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 {% endif %}
 
 
-	RpcContract::RpcContract(std::shared_ptr<potato::net::session>& session) : _session(session)
+	Rpc::Rpc(std::shared_ptr<potato::net::session>& session) : _session(session)
 	{
 	}
 
 {%- if "request" in rpc %}
-	void RpcContract::on{{ name | camelize }}Request(const potato::net::protocol::Payload& payload)
+	void Rpc::on{{ name | camelize }}Request(const potato::net::protocol::Payload& payload)
 	{
 		{{ namespace }}::{{ contract }}::{{ name }}::RequestParcel requestParcel;
 		deserialize(payload, requestParcel);
@@ -51,14 +51,14 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 		_requestDelegate(requestParcel, responser);
 	}
 
-	void RpcContract::subscribeRequest(RpcContract::RequestDelegate callback)
+	void Rpc::subscribeRequest(Rpc::RequestDelegate callback)
 	{
 		_requestDelegate = callback;
 	}
 {% endif %}
 
 {% if "notification" in rpc %}
-	potato::net::protocol::Payload RpcContract::serializeNotification({{ namespace }}::{{ contract }}::{{ name }}::Notification& notification)
+	potato::net::protocol::Payload Rpc::serializeNotification({{ namespace }}::{{ contract }}::{{ name }}::Notification& notification)
 	{
 		{{ namespace }}::{{ contract }}::{{ name }}::NotificationParcel notificationParcel;
 		notificationParcel.set_allocated_notification(&notification);
@@ -72,7 +72,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 {% endif %}
 
 {%- if "request" in rpc %}
-	void RpcContract::deserialize(const potato::net::protocol::Payload& payload, {{ namespace }}::{{ contract }}::{{ name }}::RequestParcel& outRequest)
+	void Rpc::deserialize(const potato::net::protocol::Payload& payload, {{ namespace }}::{{ contract }}::{{ name }}::RequestParcel& outRequest)
 	{
 		outRequest.Clear();
 		outRequest.ParseFromArray(payload.getPayloadData(), payload.getHeader().payloadSize);
@@ -80,7 +80,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 {% endif %}
 
 {# {%- if "request" in rpc %} #}
-	bool RpcContract::receievePayload(const potato::net::protocol::Payload& payload)
+	bool Rpc::receievePayload(const potato::net::protocol::Payload& payload)
 	{
 		switch (payload.getHeader().rpc_id)
 		{
