--- a/server/action-server3/torikime/rpc-hpp.j2
+++ b/server/action-server3/torikime/rpc-hpp.j2
@@ -16,13 +16,13 @@ namespace potato::net
 
 namespace {{ namespace }}::{{ contract }}::{{ name }}
 {
-	class RpcContract final : public RpcInterface
+	class Rpc final : public RpcInterface
 	{
 	public:
 		std::uint32_t getContractId() const override { return {{ contract_id }}; };
 		std::uint32_t getRpcId() const override { return {{ rpc_id }}; };
 
-		RpcContract(std::shared_ptr<potato::net::session>& session);
+		Rpc(std::shared_ptr<potato::net::session>& session);
 
 {%- if "request" in rpc %}
 		class Responser final
