📦I'll implement Unity Rpc

--- a/server/action-server3/torikime/rpc-csharp.j2
+++ b/server/action-server3/torikime/rpc-csharp.j2
@@ -1,12 +1,39 @@
+using System;
+using System.Collections;
+using System.Threading.Tasks;
+
 namespace {{ namespace | camelize }}
 {
 	namespace {{ contract | camelize }}
 	{
 		namespace {{ name | camelize }}
 		{
-			class Request {}
-			class Response {}
-			class Notification {}
+			public class Request {}
+			public class Response {}
+			public class Notification {}
+
+			public class Rpc : {{ namespace | camelize }}.IRpc
+			{
+				public delegate void ResponseCallback(Response response);
+				public void Request(Request request, ResponseCallback callback)
+				{
+					callback(new Response());
+				}
+
+                public IEnumerator RequestCoroutine(Request request, ResponseCallback callback)
+                {
+                    yield return null;
+                    callback(new Response());
+                }
+
+                public async Task<Response> RequestAsync(Request request)
+                {
+                    await Task.Delay(1000);
+                    return new Response();
+                }
+
+				public event Action<Notification> OnNotification;
+			}
 		}
 	}
 }
