Protobuf直取り込みだと面倒なのでUnity対応が多少整っているgRPCからProtbufの部分だけ取り込み
https://github.com/grpc/grpc/tree/master/src/csharp/experimental#unity
https://packages.grpc.io/archive/2022/02/33ec154cee644dc6b3aa8b8d5e0ece683c681edc-b4a310c9-9775-4677-9aa5-701c9d73b192/index.xml

--- a/server/action-server3/torikime/rpc-csharp.j2
+++ b/server/action-server3/torikime/rpc-csharp.j2
@@ -8,12 +8,13 @@ namespace {{ namespace | camelize }}
 	{
 		namespace {{ name | camelize }}
 		{
-			public class Request {}
+			{# public class Request {}
 			public class Response {}
-			public class Notification {}
+			public class Notification {} #}
 
 			public class Rpc : {{ namespace | camelize }}.IRpc
 			{
+{%- if "request" in rpc %}
 				public delegate void ResponseCallback(Response response);
 				public void Request(Request request, ResponseCallback callback)
 				{
@@ -31,8 +32,11 @@ namespace {{ namespace | camelize }}
                     await Task.Delay(1000);
                     return new Response();
                 }
+{% endif %}
 
+{% if "notification" in rpc %}
 				public event Action<Notification> OnNotification;
+{% endif %}
 			}
 		}
 	}
