--- a/server/action-server3/torikime/rpc-csharp.j2
+++ b/server/action-server3/torikime/rpc-csharp.j2
@@ -56,6 +56,17 @@ namespace {{ namespace | camelize }}
 					parcel.Request = request;
 
                     responseCallbacks.Add(parcel.RequestId, (response) => { callback(response); });
+
+                    Potato.Network.Protocol.Payload payload = new Potato.Network.Protocol.Payload();
+                    using (System.IO.MemoryStream ms = new System.IO.MemoryStream())
+                    using (Google.Protobuf.CodedOutputStream output = new Google.Protobuf.CodedOutputStream(ms))
+                    {
+                        parcel.WriteTo(output);
+                        output.Flush();
+                        payload.SetBufferSize((int)ms.Length);
+                        ms.Read(payload.GetBuffer(), Potato.Network.Protocol.PayloadHeader.Size, (int)ms.Length);
+                        session.SendPayload(payload);
+                    }
 				}
 
                 public IEnumerator RequestCoroutine(Request request, ResponseCallback callback)
@@ -66,6 +77,18 @@ namespace {{ namespace | camelize }}
 
 					bool wait = true;
                     responseCallbacks.Add(parcel.RequestId, (response) => { wait = false; callback(response); });
+
+                    Potato.Network.Protocol.Payload payload = new Potato.Network.Protocol.Payload();
+                    using (System.IO.MemoryStream ms = new System.IO.MemoryStream())
+                    using (Google.Protobuf.CodedOutputStream output = new Google.Protobuf.CodedOutputStream(ms))
+                    {
+                        parcel.WriteTo(output);
+                        output.Flush();
+                        payload.SetBufferSize((int)ms.Length);
+                        ms.Read(payload.GetBuffer(), Potato.Network.Protocol.PayloadHeader.Size, (int)ms.Length);
+                        session.SendPayload(payload);
+                    }
+
 					while (wait)
 					{
 						yield return null;
