--- a/server/action-server3/torikime/rpc-hpp.j2
+++ b/server/action-server3/torikime/rpc-hpp.j2
@@ -21,6 +21,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 	public:
 		std::uint32_t getContractId() const override { return {{ contract_id }}; };
 		std::uint32_t getRpcId() const override { return {{ rpc_id }}; };
+		std::shared_ptr<potato::net::session>& getSession() override { return _session; };
 
 		Rpc(std::shared_ptr<potato::net::session>& session);
 
@@ -31,7 +32,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 			Responser(std::shared_ptr<potato::net::session>& session, std::uint32_t requestId) : _session(session), _requestId(requestId) {}
 			~Responser();
 
-			void send(bool success, {{ namespace }}::{{ contract }}::{{ name }}::Response& response);
+			void send(bool success, {{ namespace }}::{{ contract }}::{{ name }}::Response&& response);
 
 		private:
 			std::shared_ptr<potato::net::session> _session;
