rename filenames Payload.* to payload.*

--- a/server/action-server3/torikime/rpc-cpp.j2
+++ b/server/action-server3/torikime/rpc-cpp.j2
@@ -2,7 +2,7 @@
 #include "../../../src/rpc/rpc.h"
 
 #include "../../../src/session/session.h"
-#include "../../../src/rpc/Payload.h"
+#include "../../../src/rpc/payload.h"
 #include "{{ contract }}_{{ name }}.h"
 
 #include "proto/{{ contract }}_{{ name }}.pb.h"
