--- a/server/action-server3/torikime/rpc-builder-hpp.j2
+++ b/server/action-server3/torikime/rpc-builder-hpp.j2
@@ -6,7 +6,7 @@
 
 namespace potato {
 	namespace net {
-		class session;
+		class Session;
 	}
 }
 
@@ -24,7 +24,7 @@ public:
 	RpcBuilder();
 	~RpcBuilder();
 
-	void build(std::shared_ptr<NetworkServiceProvider> provider, std::shared_ptr<potato::net::session> session);
+	void build(std::shared_ptr<NetworkServiceProvider> provider, std::shared_ptr<potato::net::Session> session);
 
 {%- for contract in contracts %}
 	struct
