--- a/server/action-server3/torikime/rpc-cpp.j2
+++ b/server/action-server3/torikime/rpc-cpp.j2
@@ -50,7 +50,7 @@ namespace {{ namespace }}::{{ contract }}::{{ name }}
 	std::atomic<std::uint32_t> Rpc::_notificationId = 0;
 {% endif %}
 
-	Rpc::Rpc(std::shared_ptr<potato::net::session> session) : _session(session)
+	Rpc::Rpc(std::shared_ptr<potato::net::Session> session) : _session(session)
 	{
 	}
 
